--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/socket.io-client": "^1.4.32",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "s": "^1.0.0",
+    "socket.io-client": "^2.3.0",
+    "socket.io-parser": "^3.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
